--- a/CRM/views/edit-users.ejs
+++ b/CRM/views/edit-users.ejs
@@ -25,97 +25,85 @@
   </header>
   <div class="c-body">
     <main class="c-main">
-      <!-- Main content here -->
-      <main class="main mt-2 mx-3">
+      <main class="main mt-0 mx-3">
+        <h2>Edit User Accounts</h2>
+        <hr>
         <form id="formEditContact" name="viewContact" method="post" action="/edit-user" >
           <input type="name" class="form-control" id="userID" name="userID" value="<%= results[0]._id %>" hidden>
-          <div class="card w-auto">
-            <h3 class="card-header">Edit User Account</h3>
-            <div class="card-body">
-              <h4> User Account</h4>
-              <table class="table table-bordered">
-                <tbody>
-                  <tr>
-                    <td class="align-middle">
-                      <h5> Username: </h5>
-                      <br />
-                      <input type="text" class="form-control" id="userName" name="userName" value = "<%= results[0].username %>" >
-                    </td>
-                    <td class="align-middle">
-                      <h5> Role: </h5>
-                      <select class="form-control" id="userRole" name="userRole" required>
-                        <%
-                        var roleList = '';
-                        if(results[0].usertype == "Administrator"){
-                        roleList += '<option selected>Administrator</option>';
-                        roleList += '<option>Agent</option>';
-                        roleList += '<option>ReadOnly</option>';
-                      } else if (results[0].usertype == "Agent"){
-                      roleList += '<option>Administrator</option>';
-                      roleList += '<option selected>Agent</option>';
+
+          <div class="form-row">
+            <div class="form-group col-12 col-md-auto">
+              <label for="userName">Username</label>
+              <input type="text" class="form-control" id="userName" name="userName" value = "<%= results[0].username %>" >
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-12 col-md-auto">
+              <label for="userName">Role</label>
+              <select class="form-control" id="userRole" name="userRole" required>
+                      <%
+                      var roleList = '';
+                      if(results[0].usertype == "Administrator"){
+                      roleList += '<option selected>Administrator</option>';
+                      roleList += '<option>Agent</option>';
                       roleList += '<option>ReadOnly</option>';
-                    } else {
+                    } else if (results[0].usertype == "Agent"){
                     roleList += '<option>Administrator</option>';
-                    roleList += '<option>Agent</option>';
-                    roleList += '<option selected>ReadOnly</option>';
-                  }
-                  %>
-                  <%- roleList %>
-                </select>
-              </td>
-            </tr>
-            <tr>
-              <td class="align-middle">
-                <h5> Status: </h5>
-                <select type="name" class="form-control" id="userStatus" name="userStatus"  required>
-                  <%
-                  var activeList = '';
-                  if(results[0].active){
-                  activeList += '<option selected>Enabled</option>';
-                  activeList += '<option>Disabled</option>';
-                } else {
-                activeList += '<option>Enabled</option>';
-                activeList += '<option selected>Disabled</option>';
+                    roleList += '<option selected>Agent</option>';
+                    roleList += '<option>ReadOnly</option>';
+                  } else {
+                  roleList += '<option>Administrator</option>';
+                  roleList += '<option>Agent</option>';
+                  roleList += '<option selected>ReadOnly</option>';
+                }
+                %>
+                <%- roleList %>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-12 col-md-auto">
+              <label for="userStatus">Status</label>
+              <select type="name" class="form-control" id="userStatus" name="userStatus"  required>
+                    <%
+                    var activeList = '';
+                    if(results[0].active){
+                    activeList += '<option selected>Enabled</option>';
+                    activeList += '<option>Disabled</option>';
+                  } else {
+                  activeList += '<option>Enabled</option>';
+                  activeList += '<option selected>Disabled</option>';
+                }
+                %>
+                <%- activeList %>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-12 col-md-auto">
+              <label>Change Password on Login</label>
+              <%
+                  var changePWList = '';
+                  if(results[0].changePwOnLogin){
+                  changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW" checked>';
+                }else{
+                changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW">';
               }
               %>
-              <%- activeList %>
-            </select>
-          </td>
+              <%- changePWList %>
+            </div>
+          </div>
 
-          <td class="align-left">
-            <h5> Change Password On Login: </h5>
-            <%
-            var changePWList = '';
-            if(results[0].changePwOnLogin){
-            changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW" checked>';
-          }else{
-          changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW">';
-        }
-        %>
-        <%- changePWList %>
-      </td>
-    </tr>
-    
-  </tbody>
-</table>
-<!-- BACK BUTTON -->
-<div class="form-row">
-  <div class="form-group col">
-    <button type="button" class="btn btn-primary" onclick="goBack()">Back</button>
-  </div>
-  <script>
-    function goBack() {
-      window.history.back();
-    }
-  </script>
-</div>
+
+
+
+          
+
 <button type="submit" class="btn btn-primary btn-lg">Submit</button>
 </form>
-
-
-
-</div>
-</div>
 
 </main>
 </main>
