--- a/CRM/views/report-activity.ejs
+++ b/CRM/views/report-activity.ejs
@@ -33,11 +33,11 @@
 
       <!-- Select Date Range for Data -->
             <div class="form-row">
-              <div class="form-group col-auto">
+              <div class="form-group col-12 col-md-auto">
                 <label for="inputDateStart">Date Start</label>
                 <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
               </div>
-              <div class="form-group col-auto">
+              <div class="form-group col-12 col-md-auto">
                 <label for="inputDateEnd">Date End</label>
                 <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
               </div>
@@ -45,7 +45,7 @@
 
     <!-- Select Agent from Prepopulated list of options -->
             <div class="form-row">
-              <div class="form-group col-auto">
+              <div class="form-group col-12 col-md-auto">
                 <label for="agentSelect">Agent</label>
                 <select class="form-control" name="agentSelect" id="agentSelect" required>
                   <%
@@ -61,8 +61,12 @@
 
     <!-- Submit Button to execute -->
             <div class="form-row">
-              <div class="form-group col-auto">
-                <input class="btn btn-primary" type="submit" value="Submit">
+              <div class="form-group col">
+                <div class="row">
+                  <div class="col-12 col-md-auto">
+                    <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+                  </div>
+                </div>
                 </form>
               </div>
             </div>
