--- a/CRM/views/report-client-history.ejs
+++ b/CRM/views/report-client-history.ejs
@@ -32,7 +32,7 @@
 
       <!-- Select Agent from Prepopulated list of options -->
                 <div class="form-row">
-                  <div class="form-group col-auto">
+                  <div class="form-group col-12 col-md-auto">
                       <label for="clientSelect">Client</label>
                         <select class="form-control" name="clientSelect" id="clientSelect" required>
                           <%
@@ -50,11 +50,11 @@
 
       <!-- Select Date Range for Data -->
             <div class="form-row">
-              <div class="form-group col-auto">
+              <div class="form-group col-12 col-md-auto">
                 <label for="inputDateStart">Date Start</label>
                 <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
               </div>
-              <div class="form-group col-auto">
+              <div class="form-group col-12 col-md-auto">
                 <label for="inputDateEnd">Date End</label>
                 <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
               </div>
@@ -63,7 +63,11 @@
     <!-- Submit Button to execute -->
             <div class="form-row">
               <div class="form-group col">
-                <input class="btn btn-primary" type="submit" value="Submit">
+                <div class="row">
+                  <div class="col-12 col-md-auto">
+                    <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+                  </div>
+                </div>
                 </form>
               </div>
             </div>
