--- a/CRM/views/report-visit-count.ejs
+++ b/CRM/views/report-visit-count.ejs
@@ -31,11 +31,11 @@
             <form id="formVisitCountReport" name="formVisitCountReport" method="post" action="/result-visit-count-report">
     <!-- Select Date Range for Data -->
             <div class="form-row">
-              <div class="form-group col-auto">
+              <div class="form-group col-12 col-md-auto">
                 <label for="inputDateStart">Date Start</label>
                 <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
               </div>
-              <div class="form-group col-auto">
+              <div class="form-group col-12 col-md-auto">
                 <label for="inputDateEnd">Date End</label>
                 <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
               </div>
@@ -43,7 +43,7 @@
 
     <!-- Select Agent from Prepopulated list of options -->
             <div class="form-row">
-              <div class="form-group col-auto">
+              <div class="form-group col-12 col-md-auto">
                 <label for="agentSelect">Agent</label>
                 <select class="form-control" id="agentSelect" name="agentSelect" required>
                   <%
@@ -60,7 +60,11 @@
     <!-- Submit Button to execute -->
             <div class="form-row">
               <div class="form-group col">
-                <input class="btn btn-primary" type="submit" value="Submit">
+                <div class="row">
+                  <div class="col-12 col-md-auto">
+                    <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+                  </div>
+                </div>
                 </form>
               </div>
             </div>
